Update 'go-fkybjnzn' component image to: quay.io/rhtap_qe/go-fkybjnzn:30b1f675a8af37613855d9d174621d42d239336d@sha256:c6ef34a4b62fab161c43ad1f22ce998381decda8c880c6b3c323889d0660a6c5

--- a/components/go-fkybjnzn/overlays/development/deployment-patch.yaml
+++ b/components/go-fkybjnzn/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-fkybjnzn
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-fkybjnzn:30b1f675a8af37613855d9d174621d42d239336d@sha256:c6ef34a4b62fab161c43ad1f22ce998381decda8c880c6b3c323889d0660a6c5
+          name: container-image
